# Bracu_Alter_2026

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.14.1
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.14.1  libcollision_detector_fcl_plugin.so.2.14.1  libmoveit_acceleration_filter.so.2.14.1  libmoveit_butterworth_filter.so.2.14.1  libmoveit_collision_detection.so.2.14.1  libmoveit_collision_detection_bullet.so.2.14.1  libmoveit_collision_detection_fcl.so.2.14.1  libmoveit_collision_distance_field.so.2.14.1  libmoveit_constraint_samplers.so.2.14.1  libmoveit_distance_field.so.2.14.1  libmoveit_dynamics_solver.so.2.14.1  libmoveit_exceptions.so.2.14.1  libmoveit_kinematic_constraints.so.2.14.1  libmoveit_kinematics_metrics.so.2.14.1  libmoveit_planning_interface.so.2.14.1  libmoveit_planning_scene.so.2.14.1  libmoveit_robot_model.so.2.14.1  libmoveit_robot_state.so.2.14.1  libmoveit_robot_trajectory.so.2.14.1  libmoveit_ruckig_filter.so.2.14.1  libmoveit_test_utils.so.2.14.1  libmoveit_trajectory_processing.so.2.14.1  libmoveit_transforms.so.2.14.1  (+1 more)
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/readme/: guide.txt
src/slam_launch/: CMakeLists.txt  README.md
src/slam_launch/config/: localization.yaml  slam.yaml
src/slam_launch/launch/: complete_slam.launch.py  localization.launch.py  slam_mapping.launch.py
src/slam_launch/rviz/: slam.rviz
src/slam_launch/scripts/: save_map.sh
(+216 files in other folders)
